fix: UI to prevent <mat-slide-toggle> from clipping when hovered.

--- a/src/styles/app/_properties.scss
+++ b/src/styles/app/_properties.scss
@@ -40,6 +40,10 @@
         & .prefix {
           margin-left: 15px;
         }
+
+        & mat-slide-toggle {
+          margin-right: 6px;
+        }
       }
     }
   }
